# gridcore-runner

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  FUTURE.md  HANDOVER.md  Makefile  README.md  SECURITY.md  download-model.sh  longprompt.txt  runner-codex-review-july.md  test-batch  test.gguf
docs/: ROADMAP.md  agent-compatibility.md  agent-torture.md  compatibility-program.md  moe-support.md  ornith-reference.md  performance.md  positioning.md
python/: README.md  pyproject.toml
python/src/gridcore_runner/: __init__.py  endpoint.py  lease.py  process.py
python/src/gridcore_runner_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python/tests/: test_client.py
scripts/: README.md  agent-torture.py  batch-bench.py  bench.sh  check-generated.py  compat_matrix.py  conformance.sh  consumer_compat.py  difftok.py  embed-metal.py  embed-ptx.py  get-test-vocab.sh  kernel-bench.py  kernel-verify.py  kv-quality.py  make-test-model.py  make-test-moe.py  make-test-ornith.py  make-vocab-fixture.py  ornith-reference.py  reference_compare.py  regen-ptx-win.sh  tokenizer-corpus.py  torture-compare.py  verify-gguf.py
src/: compat.c  compat.h  cuda.c  engine.c  gguf.c  gpu_none.c  json.c  json.h  jsonmode.c  kernels.cu  kernels.metal  kernels_metal.h  kernels_ptx.h  main.c  metal.m  model.c  quantize.c  quants.c  runner.h  sample.c  schema.c  server.c  template.c  tokenizer.c  vramreg.c
tests/: difftok.c  test_agent_torture.py  test_arch_admission.py  test_batch.c  test_bind.c  test_cli_files.py  test_compat_matrix.py  test_gguf_getters.c  test_json_oom.c  (+18 more)
(+109 files in other folders)
